feat: Support for workspace/willRenameFiles
Fixes #194

Signed-off-by: azerr <azerr@redhat.com>